Domínio do GeoLocation quase finalizado para a Entity Country. Mas depois que finalizar ela, é só replicar para City e State.

--- a/src/1_Presentation/1.2_Web/CrossBackEnd.UI.Web.REST.API/CrossBackEnd.UI.Web.REST.API.csproj
+++ b/src/1_Presentation/1.2_Web/CrossBackEnd.UI.Web.REST.API/CrossBackEnd.UI.Web.REST.API.csproj
@@ -9,11 +9,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.2.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\2_Domain\2.3_GeoLocation\CrossBackEnd.GeoLocation.Application\CrossBackEnd.GeoLocation.Application.csproj" />
+    <ProjectReference Include="..\..\..\2_Domain\2.3_GeoLocation\CrossBackEnd.GeoLocation.Infra.Server.IoC\CrossBackEnd.GeoLocation.Infra.Server.IoC.csproj" />
   </ItemGroup>
 
 </Project>
