--- a/src/1_Presentation/1.2_Web/CrossBackEnd.UI.Web.REST.API/appsettings.json
+++ b/src/1_Presentation/1.2_Web/CrossBackEnd.UI.Web.REST.API/appsettings.json
@@ -1,6 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Equinox;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=NDS-SERVER\\NDS;Initial Catalog=CrossBackEnd;Integrated Security=False;User ID=sa;Password=memory753#;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;",
+    "VW_Connection": "Data Source=NDS-SERVER\\NDS;Initial Catalog=VeiculosWeb_Testes;Integrated Security=False;User ID=sa;Password=memory753#;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;"
+
   },
 
   "Logging": {
