Começando a trabalhar no MVVM Desktop, apenas para testar se os Bindings vão funcionar.

--- a/src/1_Presentation/1.4_Desktop/Windows/CrossBackEnd.UI.Desktop.Windows.App/CrossBackEnd.UI.Desktop.Windows.App.csproj
+++ b/src/1_Presentation/1.4_Desktop/Windows/CrossBackEnd.UI.Desktop.Windows.App/CrossBackEnd.UI.Desktop.Windows.App.csproj
@@ -54,18 +54,31 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
+    <Compile Include="Views\GeoLocation\ListCountriesWindow.xaml.cs">
+      <DependentUpon>ListCountriesWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\GeoLocation\SaveCountryWindow.xaml.cs">
+      <DependentUpon>SaveCountryWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\_MainWindow.xaml.cs">
+      <DependentUpon>_MainWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
+    <Page Include="Views\GeoLocation\ListCountriesWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\GeoLocation\SaveCountryWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\_MainWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -93,8 +106,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
