Novos progressos!! Foi criado o CrossPlatform.Core e está funcional o MVVM com Windows Desktop WPF
Vou iniciar a implementação do Command para ser possível realizar ações através da View para a Controller

--- a/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.Core/CrossBackEnd.CrossPlatform.Core.csproj
+++ b/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.Core/CrossBackEnd.CrossPlatform.Core.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\2_Domain\2.1_Shared\CrossBackEnd.Shared.Kernel.Core\CrossBackEnd.Shared.Kernel.Core.csproj" />
     <ProjectReference Include="..\..\..\2_Domain\2.3_GeoLocation\CrossBackEnd.GeoLocation.Application\CrossBackEnd.GeoLocation.Application.csproj" />
+    <ProjectReference Include="..\CrossBackEnd.CrossPlatform.Abstractions\CrossBackEnd.CrossPlatform.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
