MVVM para Country está funcionando no WPF. Os Binding's já estão conectados e funcionando.
Falta implementar a camada Client dos serviços.

--- a/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.Core/CrossBackEnd.CrossPlatform.Core.csproj
+++ b/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.Core/CrossBackEnd.CrossPlatform.Core.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="MVVM\RelayCommand.cs~RFa5f4728.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\2_Domain\2.1_Shared\CrossBackEnd.Shared.Kernel.Core\CrossBackEnd.Shared.Kernel.Core.csproj" />
     <ProjectReference Include="..\..\..\2_Domain\2.3_GeoLocation\CrossBackEnd.GeoLocation.Application\CrossBackEnd.GeoLocation.Application.csproj" />
     <ProjectReference Include="..\CrossBackEnd.CrossPlatform.Abstractions\CrossBackEnd.CrossPlatform.Abstractions.csproj" />
