Inicio Modificação da CountryManagerPage para trabalhar com Search Bar

--- a/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/CrossBackEnd.CrossPlatform.UI.csproj
+++ b/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/CrossBackEnd.CrossPlatform.UI.csproj
@@ -15,6 +15,9 @@
     <EmbeddedResource Update="Bootstrap\Android\AndroidRootPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\GeoLocation\CountryManagerPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\_Home\HomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
