--- a/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.Core/CrossBackEnd.CrossPlatform.Core.csproj
+++ b/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.Core/CrossBackEnd.CrossPlatform.Core.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\CrossBackEnd.CrossPlatform.Abstractions\CrossBackEnd.CrossPlatform.Abstractions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Collection\" />
+  </ItemGroup>
+
 </Project>
