--- a/src/1_Presentation/1.3_Mobile/Android/CrossBackEnd.UI.Mobile.Android/Properties/AndroidManifest.xml
+++ b/src/1_Presentation/1.3_Mobile/Android/CrossBackEnd.UI.Mobile.Android/Properties/AndroidManifest.xml
@@ -1,9 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
-          package="CrossBackEnd.UI.Mobile.Android.CrossBackEnd.UI.Mobile.Android" 
-          android:versionCode="1" 
-          android:versionName="1.0">
-  <uses-sdk android:minSdkVersion="21" />
-  <application android:allowBackup="true" android:label="@string/app_name">
-  </application>
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.CrossBackEnd.UI.Mobile">
+	<uses-sdk android:minSdkVersion="15" />
+	<application android:label="CrossBackEnd.UI.Mobile.Android"></application>
 </manifest>
