MS DI funcionando!! O problema era apenas o package do EF Core no IoC do Client

--- a/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/CrossBackEnd.CrossPlatform.UI.csproj
+++ b/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/CrossBackEnd.CrossPlatform.UI.csproj
@@ -5,12 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.121934" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\2_Domain\2.3_GeoLocation\CrossBackEnd.GeoLocation.Infra.Client.IoC\CrossBackEnd.GeoLocation.Infra.Client.IoC.csproj" />
     <ProjectReference Include="..\CrossBackEnd.CrossPlatform.Infra.IoC\CrossBackEnd.CrossPlatform.Infra.IoC.csproj" />
   </ItemGroup>
 
