As Features de versionamento da Web API causaram alguns problemas desconhecidos no projeto Xamarin. Então, voltei versão e apliquei novamente o versionamento, exceto a parte de configuration contendo o Container DI, pois eu acho que foi essa parte que gerou o problema.

--- a/src/1_Presentation/1.2_Web/CrossBackEnd.UI.Web.REST.API/Properties/launchSettings.json
+++ b/src/1_Presentation/1.2_Web/CrossBackEnd.UI.Web.REST.API/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/Home",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -19,7 +19,7 @@
     "CrossBackEnd.UI.Web.REST.API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/Home",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
