--- a/src/1_Presentation/1.2_Web/CrossBackEnd.UI.Web.REST.API/appsettings.json
+++ b/src/1_Presentation/1.2_Web/CrossBackEnd.UI.Web.REST.API/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=NDS-SERVER\\NDS;Initial Catalog=CrossBackEnd;Integrated Security=False;User ID=sa;Password=memory753#;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;",
-    
+    //"DefaultConnection": "Data Source=NDS-SERVER\\NDS;Initial Catalog=CrossBackEnd;Integrated Security=False;User ID=sa;Password=memory753#;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;",
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CrossBackEnd;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
 
   "Logging": {
