--- a/src/2_Domain/2.3_GeoLocation/CrossBackEnd.GeoLocation.Infra.Client.Data/CrossBackEnd.GeoLocation.Infra.Client.Data.csproj
+++ b/src/2_Domain/2.3_GeoLocation/CrossBackEnd.GeoLocation.Infra.Client.Data/CrossBackEnd.GeoLocation.Infra.Client.Data.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\2.1_Shared\CrossBackEnd.Shared.Infra.Abstractions\CrossBackEnd.Shared.Infra.Abstractions.csproj" />
+    <ProjectReference Include="..\..\2.1_Shared\CrossBackEnd.Shared.Kernel.Core\CrossBackEnd.Shared.Kernel.Core.csproj" />
+    <ProjectReference Include="..\CrossBackEnd.GeoLocation.Application\CrossBackEnd.GeoLocation.Application.csproj" />
     <ProjectReference Include="..\CrossBackEnd.GeoLocation.Domain\CrossBackEnd.GeoLocation.Domain.csproj" />
   </ItemGroup>
 
