--- a/src/2_Domain/2.1_Shared/CrossBackEnd.Shared.Infra/CrossBackEnd.Shared.Infra.csproj
+++ b/src/2_Domain/2.1_Shared/CrossBackEnd.Shared.Infra/CrossBackEnd.Shared.Infra.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NewtonSoft.Json" Version="10.0.3" />
+    <PackageReference Include="Newtonsoft.json" Version="11.0.2" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.1" />
   </ItemGroup>
 
