--- a/src/1_Presentation/1.2_Web/CrossBackEnd.UI.Web.REST.API/CrossBackEnd.UI.Web.REST.API.csproj
+++ b/src/1_Presentation/1.2_Web/CrossBackEnd.UI.Web.REST.API/CrossBackEnd.UI.Web.REST.API.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\2_Domain\2.1_Shared\CrossBackEnd.Shared.Infra.IoC\CrossBackEnd.Shared.Infra.IoC.csproj" />
     <ProjectReference Include="..\..\..\2_Domain\2.3_GeoLocation\CrossBackEnd.GeoLocation.Application\CrossBackEnd.GeoLocation.Application.csproj" />
     <ProjectReference Include="..\..\..\2_Domain\2.3_GeoLocation\CrossBackEnd.GeoLocation.Infra.Server.IoC\CrossBackEnd.GeoLocation.Infra.Server.IoC.csproj" />
   </ItemGroup>
