--- a/src/1_Presentation/1.3_Mobile/Android/CrossBackEnd.UI.Mobile.Android/CrossBackEnd.UI.Mobile.Android.csproj
+++ b/src/1_Presentation/1.3_Mobile/Android/CrossBackEnd.UI.Mobile.Android/CrossBackEnd.UI.Mobile.Android.csproj
@@ -64,6 +64,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="appsettings2.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
