--- a/src/2_Domain/2.1_Shared/CrossBackEnd.Shared.Infra.Abstractions/CrossBackEnd.Shared.Infra.Abstractions.csproj
+++ b/src/2_Domain/2.1_Shared/CrossBackEnd.Shared.Infra.Abstractions/CrossBackEnd.Shared.Infra.Abstractions.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CrossBackEnd.Shared.Kernel.Core\CrossBackEnd.Shared.Kernel.Core.csproj" />
+  </ItemGroup>
+
 </Project>
