Implemented Navigation Service.

--- a/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.Abstractions/CrossBackEnd.CrossPlatform.Abstractions.csproj
+++ b/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.Abstractions/CrossBackEnd.CrossPlatform.Abstractions.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\2_Domain\2.1_Shared\CrossBackEnd.Shared.Kernel.Core\CrossBackEnd.Shared.Kernel.Core.csproj" />
+  </ItemGroup>
+
 </Project>
