--- a/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/CrossBackEnd.CrossPlatform.UI.csproj
+++ b/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/CrossBackEnd.CrossPlatform.UI.csproj
@@ -40,9 +40,6 @@
     <EmbeddedResource Update="Views\GeoLocation\CountryDetailsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\GeoLocation\CountryManagerPage.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
     <EmbeddedResource Update="Views\GeoLocation\CountryPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
@@ -50,6 +47,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\_Menus\MainMenuPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\_Navigation\AppNavigationPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
