--- a/src/1_Presentation/1.4_Desktop/Windows/CrossBackEnd.UI.Desktop.Windows/packages.config
+++ b/src/1_Presentation/1.4_Desktop/Windows/CrossBackEnd.UI.Desktop.Windows/packages.config
@@ -15,6 +15,7 @@
   <package id="Microsoft.Extensions.FileProviders.Embedded" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="2.0.2" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="OpenTK" version="2.0.0" targetFramework="net461" />
