--- a/src/2_Domain/2.1_Shared/CrossBackEnd.Shared.Kernel.Core/CrossBackEnd.Shared.Kernel.Core.csproj
+++ b/src/2_Domain/2.1_Shared/CrossBackEnd.Shared.Kernel.Core/CrossBackEnd.Shared.Kernel.Core.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Enums\" />
+  </ItemGroup>
+
 </Project>
